--- a/Aproksimasi_Integral.ipynb
+++ b/Aproksimasi_Integral.ipynb
@@ -6,7 +6,7 @@
       "name": "Aproksimasi Integral.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyPHb8Zu9mai5rSfOh8YE5S4",
+      "authorship_tag": "ABX9TyMi8jJK03pY2OoDH025BdHe",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -111,19 +111,19 @@
       "metadata": {
         "id": "KI2Sd2bF0WlC",
         "colab_type": "code",
+        "outputId": "4f398cf6-72ed-4731-ab84-b2bf05f3d735",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 279
-        },
-        "outputId": "4f398cf6-72ed-4731-ab84-b2bf05f3d735"
+        }
       },
       "source": [
         "plt.plot(arrTry, arrApprox)\n",
-        "plt.xlabel('Trial')\n",
+        "plt.xlabel('Trial (x100)')\n",
         "plt.ylabel('Approx')\n",
         "plt.show()"
       ],
-      "execution_count": 119,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "display_data",
